--- a/assets/css/skin.css
+++ b/assets/css/skin.css
@@ -6,7 +6,7 @@
 * Insert into this file all the CSS of your custom design and load this file into every page you need.
 */
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500,600,700,800');
+@import url('https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/s.css');
 
 /*
 -------------------------------------------------------------------
